# chatig

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.en.md  README.md  chatig.spec  diesel.toml  kitig.spec
docs/: chatig_deployment.md  chatig开发文档.md
docs/chatchat部署/: chatchat-k8s.md
docs/chatig_k8s/: chatig-docker.md  chatig-k8s部署.md
docs/chatig_k8s/manifests/: pgsql-pv.yaml
docs/chatig部署文档/: chatig部署（linux）.md  chatig部署（windows）.md
docs/chatig部署文档/chatig部署（linux-k8s）/: chatig-docker.md
docs/chatig部署文档/pgsql 部署/: install&init(apt).md  install&init(yum).md  pgsql常用命令.md
docs/https/: server.crt  server.key
docs/invitation/: invitation.md
docs/models/: chatchat-docker.md
docs/pgsql/: Dockerfile.pgsql  env_setup.md  install&init(apt).md  install&init(yum).md
examples/: models.yaml  services.yaml
migrations/2024-12-25-142339_chatig_v0/: down.sql  up.sql
scripts/: init.sql  init_sql.sh  lines.sh
src/: main.rs  schema.rs  utils.rs
src/apis/: api_doc.rs  mod.rs  schemas.rs
src/apis/control_api/: files.rs  invitation_code.rs  mod.rs  model_limits.rs  models.rs  projects.rs  schemas.rs  services.rs  users.rs
src/apis/funcs_api/: file_chat.rs  files.rs  mod.rs  (+1 more)
src/configs/: configs.yaml  log4rs.yaml  models_configs.yaml  servers_configs.yaml  settings.rs
src/cores/: chat_completions.rs  chatchat.rs  copilot.rs  embeddings.rs  mod.rs  models.rs  schemas.rs  services.rs
src/database/: diesel.rs  files.rs  init.rs  mod.rs  users.rs
src/meta/: connection.rs  files.rs  init.rs  mod.rs  models.rs  projects.rs  services.rs  users.rs
src/middleware/: api_key.rs  auth4manage.rs  auth4model.rs  auth_cache.rs  mod.rs  qos.rs  rate_limit.rs
src/models/: api_schemas.rs  chatchat.rs  copilot.rs  mod.rs
src/servers/: api_schemas.rs  files.rs  invitation_code.rs  mod.rs  models.rs  projects.rs  server.rs  users.rs
src/test/: mod.rs  servers_test.rs
src/utils/: kafka.rs  log.rs  mod.rs
(+59 files in other folders)
