[package]
name = "chatig"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2"
actix-multipart = "0.4"
serde = { version = "1.0", features = ["derive"] }  
serde_json = "1.0"
serde_yaml = "0.9.0"
reqwest = { version = "0.11.27", features = ["json", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }  
tokio-stream = "0.1"
tokio-postgres = "0.7"  
bb8 = "0.7"
bb8-postgres = "0.7"  
dotenv = "0.15"  
futures = "0.3"
async-stream = "0.3"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] } 
actix-cors = "0.6.2"
rand = "0.8.5"
percent-encoding = "2.2.0"