[package]
name = "chatig"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0", features = ["rustls-0_23"] }
actix-service = "2.0"
actix-rt = "2.5.0"
actix-cors = "0.6.2"
actix-multipart = "0.7.2"
async-trait = "0.1"

serde = { version = "1.0", features = ["derive"] }  
serde_json = "1.0"
serde_yaml = "0.9.0"

reqwest = { version = "0.11.27", features = ["json", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }  
tokio-stream = "0.1"
tokio-postgres = "0.7"  
bb8 = "0.7"
bb8-postgres = "0.7"  
dotenv = "0.15"  
futures = "0.3"
async-stream = "0.3"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] } 
rand = "0.8.5"
percent-encoding = "2.2.0"
serde_urlencoded = "0.7"
diesel = { version = "2.0", features = ["postgres","r2d2"] }
dotenvy = "0.15"
once_cell = "1.18"
r2d2 = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "any", "mysql", "postgres"] }
log = "0.4.22"
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "4", features = ["actix-web"] }
utoipa-axum = { version = "0", default-features = false }
rustls = "0.23.20"
rustls-pemfile = "2.2.0"
log4rs = "1.3.0"
leaky-bucket = "1.1.2"
